# catkin_ws

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/depthimage_to_laserscan/: depthimage_to_laserscan
devel/lib/fake_localization/: static_odom_broadcaster.py
devel/lib/grid_map_controller/: aEstrela.py  a_estrela.py  assinante.py
devel/lib/img_reception_intern/: recepcao_imagem.py
devel/lib/img_transmission_intern/: captura_transmissao_imagem.py
devel/lib/localizer_controller/: localizer.py
devel/lib/map_controller/: map.py
devel/lib/mapping/: Occ_grid_map.py  grid.py
devel/lib/motion_planing_controller/: enviaSerial.py
devel/lib/pkgconfig/: depthimage_to_laserscan.pc  fake_localization.pc  grid_map_controller.pc  img_reception_intern.pc  img_transmission_intern.pc  localizer_controller.pc  map_controller.pc  mapping.pc  motion_planing_controller.pc  serial_controller.pc  vid_reception_ip.pc  vid_transmission_ip.pc
devel/lib/serial_controller/: joy.py  teste
devel/lib/vid_reception_ip/: vid_reception_ip.py
devel/lib/vid_transmission_ip/: vid_transmission_ip.py
src/grid_map_controller/: CMakeLists.txt
src/launchrs/: CMakeLists.txt
src/localizer_controller/: CMakeLists.txt  package.xml
src/map/mapping/: CMakeLists.txt  depthtolaser.launch  slam_gmapping_pr2.launch  teste.launch
src/map/mapping/scripts/: Occ_grid_map.py  clock.py  fake.py  grid.py  scan.py
src/map/wheeled_robin-hydro-devel/wheeled_robin_driver/: package.xml
src/map_controller/: CMakeLists.txt  package.xml
src/map_controller/scripts/: map.py
src/mapping/: CMakeLists.txt  depthtolaser.launch  teste.launch
src/modeloURDF/: modeloOsorin.urdf
src/motion_planing_controller/: CMakeLists.txt
src/serial_controller/: CMakeLists.txt
(+38 files in other folders)
